# crossword-gen

./: .env  .gitignore  Dockerfile  Pipfile  README.md  experiment.py  experiment_no_score.py  grid.htm  pyproject.toml  run.py  run_worker.py  solve.pl  solve_prolog.sh  transform_input.sh
.github/actions/setup-python-poetry/: main.yml
.github/scripts/: annotate_mypy.py  annotate_pylint.py
.github/workflows/: ci.yml
benchmark/: benchmark.py
config/: __init__.py  env.py
crossword/experiments/: __init__.py  e1.py  e2.py
crossword/exporter/: __init__.py  csv_exporter.py  prolog_exporter.py
crossword/objects/: __init__.py  charlist.py  cross.py  crossword.py  mask.py  word.py  word_combinator.py  word_list.py  word_space.py
crossword/objects/language/: __init__.py  alphabet.py  similarity.py  split.py  suitability.py
crossword/parser/: parser.py
crossword/runner/: runner.py
crossword/solver/: solver.py
input/: Czech.dic
tests/crossword/objects/: __init__.py  test_cross.py  test_word_space.py
