[tool.poetry]
name = "crossword-generator"
version = "0.1.0"
description = "Swedish Crossword Generator with vector weighting (preference) of words"
authors = ["Adam Benda <adam@adasek.cz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "=9.1.0"
pandas = "=1.5.3"
PyICU = "=2.10.2"
faktory = "=1.0.0"
python-dotenv = "=1.0.0"
requests = "=2.28.2"


[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
